# University

./: README.md
An1/Sem1/FP/: curs1.ipynb  lab1.ipynb  lab2.ipynb  test_FP.7z
An1/Sem1/LC/: tema_fac1.ipynb
An1/Sem2/OOP/examen/: CMakeLists.txt  domain.gcno  domain.h  ftest.in  gui.cpp  gui.h  main  main.cpp  main.gcda  main.gcno  repo.cpp  repo.gcda  repo.gcno  repo.h  service.cpp  service.gcda  service.gcno  service.h  tests.cpp  tests.gcda  tests.gcno  tests.h  valid.cpp  valid.gcda  valid.gcno  valid.h
An1/Sem2/OOP/lab10/src/: CMakeLists.txt  gui.cpp  gui.h  guiModelView.cpp  guiModelView.h  main.cpp  main.h  observer.h
An1/Sem2/OOP/lab10/src/domain/: VectorDinamic.cpp.txt  cart.cpp  cart.h  listOffers.h  offer.cpp  offer.h  report.cpp  report.h
An1/Sem2/OOP/lab10/src/errors/: errors.h
An1/Sem2/OOP/lab10/src/repo/: repo.cpp  repo.h
An1/Sem2/OOP/lab10/src/service/: undo.h
An1/Sem2/OOP/lab10/src/valid/: valid.cpp  valid.h
An1/Sem2/OS/: cmds.txt
An1/Sem2/SageMath/: lab01.ipynb  lab02.ipynb  lab03.ipynb  lab04.ipynb  lab05.ipynb
An2/AI/ai-lab01-DeepSmeag/: README.md
An2/AI/ai-lab02-DeepSmeag/: funcs.py
An2/AI/ai-lab03-DeepSmeag/: cerinta.md  lab03.ipynb
An2/AI/ai-lab04-DeepSmeag/: cerinta.md  lab04.ipynb
An2/AI/ai-lab05-DeepSmeag/: cerinta.md  lab05.ipynb
An2/AI/ai-lab06-DeepSmeag/: 3d-scatter-colorscale.html  cerinta.md
An2/AI/ai-lab07-DeepSmeag/: cerinta.md
An2/AI/ai-lab08-DeepSmeag/: cerinte.md  lab08.ipynb
An2/AI/ai-lab09-DeepSmeag/: W1.txt  W1m.txt  W2.txt  W2m.txt  (+2 more)
An2/BD/: TestBDSubj4VoinopolCosmin227_2.sql  TestsInformation.sql  TestsWrapper.sql
An2/ISS/: Entitati.docx  ISS_lab_1.txt  ISS_seminar_1.md  ISS_seminar_3.md  ISSorm.7z  P6uml.mdj  ProiectFinal.docx  Seminar3.mdj  Use cases p6.docx  loginMenu.fxml  mainMenu.fxml  roomConfig.fxml  src.7z
An3/NLP/: 25_Voinopol.txt  25a_Voinopol.txt  26_Voinopol.txt  26a_Voinopol.txt  27_Voinopol.txt  27a_Voinopol.txt  28_Voinopol.txt  28a_Voinopol.txt  backend.py  experiments.ipynb  experimentsCorola.ipynb  frontend.py  keyword.ipynb  mock.py  resurse.txt  selectieCorola.txt
An3/lftc/: lab5.7z  labautomata.7z  labflex.7z  labsyntax.7z
(+1519 files in other folders)
